@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2008 the original author or authors.
+ * Copyright 2002-2012 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,6 +20,8 @@ import java.util.Map;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+
+import org.springframework.http.MediaType;
 
 /**
  * MVC View for a web interaction. Implementations are responsible for rendering
@@ -51,12 +53,19 @@ public interface View {
 
 	/**
 	 * Name of the {@link HttpServletRequest} attribute that contains a Map with path variables.
-	 * The map consists of String-based URI template variable names as keys and their corresponding 
-	 * Object-based values -- extracted from segments of the URL and type converted.  
-	 * 
+	 * The map consists of String-based URI template variable names as keys and their corresponding
+	 * Object-based values -- extracted from segments of the URL and type converted.
+	 *
 	 * <p>Note: This attribute is not required to be supported by all View implementations.
 	 */
 	String PATH_VARIABLES = View.class.getName() + ".pathVariables";
+
+	/**
+	 * The {@link MediaType} selected during content negotiation, which may be
+	 * more specific than the one the View is configured with. For example:
+	 * "application/vnd.example-v1+xml" vs "application/*+xml".
+	 */
+	String SELECTED_CONTENT_TYPE = View.class.getName() + ".selectedContentType";
 
 	/**
 	 * Return the content type of the view, if predetermined.
